# lisper

./: .gitignore  Issues.txt  LICENSE  Main.hs  Offline.md  README.md  README.org  lisper.cabal  lisper.hs  stack.yaml
exec/: Main.hs
scripts/: fact.ss  let.ss  merge.ss
src/: Core.hs  Eval.hs  Lisper.hs  Main.hs  Parser.hs  Primitives.hs  Repl.hs  Util.hs
src/Lisper/: Compiler.hs  Core.hs  Eval.hs  Macro.hs  Parser.hs  Primitives.hs  Repl.hs  Token.hs  Util.hs
test/: Test.hs
