name:                lisper
version:             0.1.0.0
synopsis:            A tiny lisp interpreter
description:         A scheme like, but static and strong, lazy pattern matched lisp.
homepage:            https://github.com/jaseemabid/lisper
license:             MIT
license-file:        LICENSE
author:              Jaseem Abid
maintainer:          jaseemabid@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.18

source-repository head
  type:     git
  location: https://github.com/jaseemabid/lisper

library
  exposed-modules:     Lisper,
                       Lisper.Core,
                       Lisper.Eval,
                       Lisper.Parser,
                       Lisper.Primitives,
                       Lisper.Repl,
                       Lisper.Util
  -- other-modules:
  other-extensions:    OverloadedStrings, PatternSynonyms
  build-depends:       base, directory, parsec, haskeline
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

executable lisper
  main-is:             Main.hs
  build-depends:       base,
                       lisper
  default-language:    Haskell2010
  hs-source-dirs:      exec

test-suite lisper-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  hs-source-dirs:    test
  main-is:           Test.hs
  build-depends:     base,
                     lisper,
                     parsec,
                     haskeline,
                     HUnit,
                     tasty,
                     tasty-hunit
