name:                lisper
version:             0.1.0.0
synopsis:            A tiny lisp interpreter
description:         A R5RS scheme clone
homepage:            https://github.com/jaseemabid/lisper
license:             MIT
license-file:        LICENSE
author:              Jaseem Abid
maintainer:          jaseemabid@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.18

source-repository head
  type:     git
  location: https://github.com/jaseemabid/lisper

library
  exposed-modules:     Lisper,
                       Lisper.Core,
                       Lisper.Eval,
                       Lisper.Macro,
                       Lisper.Parser,
                       Lisper.Token,
                       Lisper.Primitives,
                       Lisper.Repl,
                       Lisper.Util
  -- other-modules:
  other-extensions:    OverloadedStrings, PatternSynonyms
  build-depends:       HUnit,
                       base,
                       bytestring,
                       directory,
                       haskeline,
                       mtl,
                       parsec,
                       process,
                       tasty,
                       tasty-hunit
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      src
  default-language:    Haskell2010

executable lisper
  main-is:             Main.hs
  build-depends:       base,
                       lisper
  default-language:    Haskell2010
  hs-source-dirs:      exec

test-suite lisper-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       HUnit,
                       base,
                       bytestring,
                       directory,
                       haskeline,
                       lisper,
                       mtl,
                       parsec,
                       process,
                       tasty,
                       tasty-hunit
